--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-API_ID = ""
-API_HASH = "'
-STRING = ""
-STRING2 = ""
-STRING3 = ""
-STRING4 = ""
+API_ID = "
+API_HASH = "
+STRING = "
+STRING2 = "
+STRING3 = "
+STRING4 = "
 STRING5 = ""
 STRING6 = ""
 STRING7 = ""
@@ -16,3 +16,4 @@ STRING13 = ""
 STRING14 = ""
 STRING15 = ""
 SUDO = ""
+GROUP_USERNAME = "ygabutkan"
